--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "emoji-mart": "^3.0.0",
+    "firebase": "^7.14.2",
+    "md5": "^2.3.0",
+    "mime": "^2.4.6",
+    "moment": "^2.29.0",
     "react": "^16.13.1",
+    "react-avatar-editor": "^11.0.7",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.3.0",
+    "uuidv4": "^6.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
